{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 56,
  "lineage": "cb23d092-cf00-8935-2fd8-357068e69576",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "webservers_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:263943073403:loadbalancer/webservers-loadbalancer",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "webservers-loadbalancer-1805187880.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "webservers-loadbalancer",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "webservers-loadbalancer",
            "security_groups": [
              "sg-0689a5e4c5946dc37"
            ],
            "source_security_group": "263943073403/nodejs Security Group",
            "source_security_group_id": "sg-0689a5e4c5946dc37",
            "subnets": [
              "subnet-07fd06c99ae76cb0a",
              "subnet-0dd024c043f9cc83b"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.nodejs-sg1",
            "aws_subnet.nodejs-subnet",
            "aws_subnet.nodejs-subnet1",
            "aws_vpc.nodejs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nodejs-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263943073403:internet-gateway/igw-0dc00fb1632fefb9a",
            "id": "igw-0dc00fb1632fefb9a",
            "owner_id": "263943073403",
            "vpc_id": "vpc-0274c95bf48d21bf7"
          },
          "dependencies": [
            "aws_vpc.nodejs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nodejs-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263943073403:route-table/rtb-08eb63a21e5563e82",
            "id": "rtb-08eb63a21e5563e82",
            "owner_id": "263943073403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc00fb1632fefb9a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to internet"
            },
            "tags_all": {
              "Name": "Route to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0274c95bf48d21bf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nodejs-igw",
            "aws_vpc.nodejs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05331ffd4db12a1cb",
            "route_table_id": "rtb-08eb63a21e5563e82",
            "subnet_id": "subnet-0dd024c043f9cc83b"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-igw",
            "aws_route_table.nodejs-route",
            "aws_subnet.nodejs-subnet",
            "aws_vpc.nodejs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0375b471dee78ec82",
            "route_table_id": "rtb-08eb63a21e5563e82",
            "subnet_id": "subnet-07fd06c99ae76cb0a"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-igw",
            "aws_route_table.nodejs-route",
            "aws_subnet.nodejs-subnet1",
            "aws_vpc.nodejs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodejs-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263943073403:security-group/sg-0689a5e4c5946dc37",
            "description": "nodejs Module",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0689a5e4c5946dc37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nodejs Security Group",
            "name_prefix": "",
            "owner_id": "263943073403",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0274c95bf48d21bf7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nodejs-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nodejs-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263943073403:subnet/subnet-0dd024c043f9cc83b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd024c043f9cc83b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263943073403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nodejs subnet"
            },
            "tags_all": {
              "Name": "Nodejs subnet"
            },
            "vpc_id": "vpc-0274c95bf48d21bf7"
          },
          "dependencies": [
            "aws_vpc.nodejs-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nodejs-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263943073403:subnet/subnet-07fd06c99ae76cb0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fd06c99ae76cb0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263943073403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nodejs subnet 1"
            },
            "tags_all": {
              "Name": "Nodejs subnet 1"
            },
            "vpc_id": "vpc-0274c95bf48d21bf7"
          },
          "dependencies": [
            "aws_vpc.nodejs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nodejs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263943073403:vpc/vpc-0274c95bf48d21bf7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b2d65eca5b169437",
            "default_route_table_id": "rtb-0f63e461175e6262d",
            "default_security_group_id": "sg-0425fe3aaea2ed4c7",
            "dhcp_options_id": "dopt-db80eba1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0274c95bf48d21bf7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f63e461175e6262d",
            "owner_id": "263943073403",
            "tags": {
              "Name": "Demo nodejsvpc"
            },
            "tags_all": {
              "Name": "Demo nodejsvpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}